update cloud run internal

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -75,7 +75,7 @@ jobs:
             --platform "managed" \
             --port "3000" \
             --allow-unauthenticated \
-            --ingress all \
+            --ingress internal-and-cloud-load-balancing \
             --service-account="${{ secrets.GCP_SERVICE_ACCOUNT_EMAIL_CLOUDRUN }}" \
             --min-instances=0 \
             --max-instances=2 \
