--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "^15.5.3",
+    "next-intl": "^4.4.0",
     "next-themes": "^0.4.4",
     "react": "^18",
     "react-dom": "^18",
